--- a/invoice.html
+++ b/invoice.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>登録完了</title>
+    <title>登録完了【デモ】</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
@@ -12,7 +12,7 @@
       <div class="hero-body">
         <div id="app" class="container">
           <h1 class="title is-size-1">
-        登録完了
+        登録完了【デモ】
           </h1>
           <p class="is-size-3">お客様の会員登録が正常に完了しました。</p>
           <p class="is-size-3 has-text-danger">3日以内に<span class="has-text-weight-bold">98,000円</span>お支払い下さい。</p>
