--- a/invoice.html
+++ b/invoice.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>登録完了【デモ】</title>
+    <title>登録完了</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
@@ -12,19 +12,33 @@
       <div class="hero-body">
         <div id="app" class="container">
           <h1 class="title is-size-1">
-        登録完了【デモ】
+        登録完了
           </h1>
           <p class="is-size-3">お客様の会員登録が正常に完了しました。</p>
           <p class="is-size-3 has-text-danger">3日以内に<span class="has-text-weight-bold">98,000円</span>お支払い下さい。</p>
           <p class="is-size-3 has-text-danger">お支払いが確認できない場合は<span class="has-text-weight-bold">法的処置</span>をとらせて頂きますのでご注意下さい。</p>
           <div class="notification is-danger" v-bind:style="{background: color}">
-            <p class="is-size-2 has-text-centered">残り{{ count }}秒</p>
+            <p class="is-size-2 has-text-centered">残り
+     <span id="hour">6</span>時間
+     <span id="min">0</span>分
+     <span id="sec">0</span>秒
+            </p>
+            <progress class="progress"></progress>
           </div>
         </div>
       </div>
     </section>
     <section class="section">
       <div class="container">
+        <h2 class="title">お客様情報</h2>
+     <table class="table is-striped is-fullwidth">
+      <tr>
+        <td>端末日時</td><td><span id="date"</span></td>
+      </tr>
+      <tr>
+        <td>端末情報</td><td><span id="device"</span></td>
+      </tr>
+    </table>
       <h2 class="title">お問い合わせ</h2>
      <table class="table is-striped is-fullwidth">
       <tr>
